finished learning and implementing contor plot in the 4k house rent dataset

--- a/Practice Codes/2. Labs/1. Linear Regression/contorPlot.ipynb
+++ b/Practice Codes/2. Labs/1. Linear Regression/contorPlot.ipynb
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 1,
       "metadata": {
         "id": "rdiN_H-Rqwxr"
       },
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 2,
       "metadata": {
         "id": "NMVpaXGEVSnP"
       },
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 3,
       "metadata": {
         "id": "StoHujNuVUgP"
       },
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -203,7 +203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 5,
       "metadata": {
         "id": "OyXOFEwkq7Io"
       },
@@ -215,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -231,7 +231,7 @@
               "0.7491512476548897"
             ]
           },
-          "execution_count": 66,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -251,7 +251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -275,7 +275,8 @@
       "source": [
         "#Produce the plots\n",
         "def loss(a,b):\n",
-        "  return 1/len(x)*(np.sum((a*x + b - y)**2))\n",
+        "  # print(a,b)\n",
+        "  return 1/len(x)*(np.sum((a*x + b - y)**2))  \n",
         "\n",
         "fig = plt.figure(figsize=(14,6))\n",
         "ax = fig.add_subplot(1, 2, 1, projection=\"3d\")\n",
@@ -313,17 +314,6 @@
         "ax.set_zlabel('loss',rotation=\"vertical\")\n",
         "ax.set_title('loss function')\n",
         "plt.tick_params(axis='both', which='major', labelsize=7)\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "s15uUzRpp8OS"
-      },
-      "source": [
-        "#### Return to the book\n",
-        "<img src=\"https://raw.githubusercontent.com/tensorchiefs/dl_book/master/imgs/Page_turn_icon_A.png\" width=\"120\" align=\"left\" />  \n",
-        "Return to the book to learn how to calculate and update the gradients w.r.t the parameters a and b."
       ]
     },
     {
