--- a/Practice Codes/Bank.ipynb
+++ b/Practice Codes/Bank.ipynb
@@ -4,26 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bank Term Deposit Predictor\n",
+    "### Problem Set 2:\n",
+    "# Bank Term Deposit Predicton\n",
     "\n",
-    "A banking institution wants to develop a model that predicts whether a customer will subscribe to a term deposit or not based on their banking behaviour. They have collected a dataset of past customers with information about their demographics, account details, and whether they subscribed to a term deposit or not. We wants to build a model using Logistic Regression to predict whether a new customer will subscribe to a term deposit or not based on their banking behaviour.\n",
+    "### Problem Statement\n",
+    "A banking institution wants to develop a model that predicts whether a customer will subscribe to a term deposit or not based on their banking behaviour. They have collected a dataset of past customers with information about their demographics, account details, and whether they subscribed to a term deposit or not. The bank wants to build a model using Logistic Regression to predict whether a new customer will subscribe to a term deposit or not based on their banking behaviour.\n",
     "\n",
-    "## Dataset\n",
+    "The dataset used for this problem statement is the \"Bank Marketing Data Set\" which contains information on customers of a bank. The dataset includes 17 attributes such as customer demographics, account details, and whether the customer subscribed to a term deposit or not. Each customer is classified as either yes or no based on whether they subscribed to a term deposit or not.\n",
     "\n",
-    "The dataset used for this problem is the \"Bank Marketing Data Set\" which contains information on customers of a bank. The dataset includes 17 attributes such as customer demographics, account details, and whether the customer subscribed to a term deposit or not. Each customer is classified as either yes or no based on whether they subscribed to a term deposit or not.\n",
+    "### Dataset\n",
     "\n",
-    "### Setup\n"
+    "[Dataset : Click here to see the dataset](https://drive.google.com/file/d/18KwSR9aVTZRNaOVF76VE9USSEkqnYzzQ/view?usp=sharing)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From c:\\ProgramData\\anaconda3\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
       "2.15.0\n"
      ]
     }
